--- a/PFAElementals/Packages/manifest.json
+++ b/PFAElementals/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.package-manager-ui": "2.1.2",
     "com.unity.probuilder": "4.0.4",
+    "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.purchasing": "2.0.6",
     "com.unity.render-pipelines.high-definition": "5.10.0-preview",
     "com.unity.shadergraph": "5.7.2",
